test/semantic_error/se_fc_arr.c0
int a[2];

int f() {a();}
